--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
-      "types": ["jest", "node"]
+      "types": ["jest", "node"],
+      "esModuleInterop": true
     }
   }
